--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.3",
+    "@tailwindcss/forms": "^0.5.2",
     "nuxt": "3.0.0-rc.4"
   }
 }
