--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@tailwindcss/forms": "^0.5.2",
-    "nuxt": "3.0.0-rc.4"
+    "nuxt": "^3.0.0-rc.8"
   }
 }
